--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet"  type="text/css" href="styles/template_container-wrapper.css" />
   <link rel="stylesheet" type="text/css" href="styles/template_footer.css">
   <link rel="stylesheet" type="text/css" href="styles/template_top-line.css">
-  <link rel="stylesheet" type="text/css" href="styles/index.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body>
